Fix: #32: Fix keyboard navigation in search panel, also improved menu css and behaviour of keyboard on context menu (to avoid selecting invisible entries), which involved upgrading jquery-ui-contextmenu to 1.18.1.

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -35,8 +35,8 @@
 	/* tabs */
 	.ui-widget-header { }
 
-	.ui-menu-item-wrapper {
-		width: 100px;
+	.ui-menu {
+		width: 150px;
 	}
 
 	.current,
